employee get roles by filter apis and unit tests
