# job-rotation-app-backend/src/main/java/project/job_rotation_app/controller/EmployeeController.java
@@ -5,6 +5,9 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
+import project.job_rotation_app.model.Departments;
+import project.job_rotation_app.model.Duration;
+import project.job_rotation_app.model.Grades;
 import project.job_rotation_app.model.Roles;
 import project.job_rotation_app.service.EmployeeBusinessServiceImpl;
 
@@ -12,11 +15,26 @@ import project.job_rotation_app.service.EmployeeBusinessServiceImpl;
 @RequestMapping("/employee")
 public class EmployeeController {
 
-    @Autowired
-    EmployeeBusinessServiceImpl employeeBusinessService;
-    
-    @GetMapping("/list-available-roles")
-    public List<Roles> getAvailableRoles() {
-        return employeeBusinessService.getAvailableRoles();
-    }
+  @Autowired
+  EmployeeBusinessServiceImpl employeeBusinessService;
+
+  @GetMapping("/list-available-roles")
+  public List<Roles> getAvailableRoles() {
+    return employeeBusinessService.getAvailableRoles();
+  }
+
+  @GetMapping("/list-available-roles/{grade}")
+  public List<Roles> getAvailableRolesByGrade(Grades grade) {
+    return employeeBusinessService.getAvailableRolesByGrade(grade);
+  }
+
+  @GetMapping("/list-available-roles/{department}")
+  public List<Roles> getAvailableRolesByGrade(Departments department) {
+    return employeeBusinessService.getAvailableRolesByDepartment(department);
+  }
+
+  @GetMapping("/list-available-roles/{duration}")
+  public List<Roles> getAvailableRolesByDuration(Duration duration) {
+    return employeeBusinessService.getAvailableRolesByDuration(duration);
+  }
 }
